Fix text alignment.

--- a/war/css/default.css
+++ b/war/css/default.css
@@ -226,6 +226,7 @@ h6 {
 }
 
 p {
+text-align: justify;
 	margin: 0 0 30px 0;
 }
 
